--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -11,6 +11,7 @@ cabal-file: project.cabal
 version: 1
 extra-packages: ''
 ghc-args:
+- -Wall
 - -fdefer-type-errors
 excluded-modules:
 - impossibles.hs
