--- a/score2.cabal
+++ b/score2.cabal
@@ -22,8 +22,8 @@ cabal-version:       >=1.10
 executable server
   main-is:             Main.hs
   build-depends:       base >=4.7 && <4.8 
-                       , random >=1.0 && <1.1
-                       , text >=1.1 && <1.2
+                       , random >=1.0
+                       , text >=1.1
                        , websockets >=0.9.2 
                        , transformers >=0.3
                        , wai >=3.0 
