--- a/score2.cabal
+++ b/score2.cabal
@@ -29,3 +29,5 @@ executable server
                        , split
   -- hs-source-dirs:      
   default-language:    Haskell2010
+  ghc-options: -with-rtsopts-ki8K
+
