--- a/score2.cabal
+++ b/score2.cabal
@@ -29,5 +29,4 @@ executable server
                        , split
   -- hs-source-dirs:      
   default-language:    Haskell2010
-  ghc-options: -with-rtsopts-ki8K
-
+  ghc-options: -with-rtsopts
